working on fixing styling on small mobile screens

--- a/style.css
+++ b/style.css
@@ -578,15 +578,19 @@ input::placeholder {
 
   .main-title h1 {
     text-align: center;
-    font-size: 45px;
+    font-size: 36px;
     padding: 0px 10px 30px;
   }
 
   .subtitle-mobile-container {
     display: flex;
-    width: 90%;
+    width: 50%;
     /* align-items: center; */
     z-index: 2;
+  }
+  
+  .form-title {
+    font-size: 15px;
   }
 
   .right p {
@@ -621,11 +625,11 @@ input::placeholder {
     flex-direction: column;
     text-align: center;
     justify-content: center;
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
     background-color: var(--primary-color);
-    padding: 10% 5%;
-    margin: 10% 0;
+    /* padding: 10% 5%; */
+    /* margin: 10% 0; */
     border-radius: 50%;
     border: 4px solid #00a1e3;
     transform: rotate(-10deg);
@@ -735,11 +739,4 @@ input::placeholder {
   .loc-south {
     line-height: 4vw;
   }
-}
-
-@media only screen and (min-width: 510px) {
-  .subtitle-mobile-container {
-    width: 50%;
-  }
-
 }
